@startuml
title Diagramma delle Classi di Analisi (EBC) - Sistema Negozio Fiori

' Definizione Stereotipi
skinparam class {
    BackgroundColor<<boundary>> 
    BackgroundColor<<control>> 
    BackgroundColor<<entity>> 
}

package "Analisi: Servizi e Gestione" {
    ' Boundary
    class InterfacciaCliente <<boundary>>
    class InterfacciaNegoziante <<boundary>>

    ' Control
    class GestoreRichieste <<control>>
    class GestoreCatalogo <<control>>
    class GestoreFornitori <<control>>

    ' Entity
    class Richiesta <<entity>>
    class Articolo <<entity>>
    class Fornitore <<entity>>
    class Consegna <<entity>>
}

' Relazioni EBC: Boundary parla con Control, Control parla con Entity
InterfacciaCliente ..> GestoreRichieste : usa
InterfacciaCliente ..> GestoreCatalogo : visualizza

InterfacciaNegoziante ..> GestoreRichieste : gestisce
InterfacciaNegoziante ..> GestoreCatalogo : aggiorna
InterfacciaNegoziante ..> GestoreFornitori : amministra

GestoreRichieste --> Richiesta : coordina
GestoreRichieste --> Consegna : coordina
GestoreCatalogo --> Articolo : gestisce
GestoreFornitori --> Fornitore : gestisce

@enduml